--- a/0518-10-form-post.html
+++ b/0518-10-form-post.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    fdsf
-    
+    <form action="0518-09-form-post.php" method="post">
+        <input type="text" id="account" name="account" placeholder="帳號">
+        <input type="password" id="password" name="password" placeholder="密碼">
+        <input type="submit">
+    </form>
 </body>
 </html>
